force-app/main/default/objects/walnut__Query__c/walnut__Query__c.object-meta.xml
<CustomObject>
    <description>walnut queries to be use in canvas</description>
    <label>Query</label>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>