force-app/main/default/objects/walnut__Query__c/fields/walnut__Action__c.field-meta.xml
<CustomField>
    <fullName>walnut__Action__c</fullName>
    <description>Action</description>
    <inlineHelpText>Action</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>