force-app/main/default/objects/walnut__Query__c/fields/walnut__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>walnut__DisplayName__c</fullName>
    <description>Display Name</description>
    <inlineHelpText>Display Name</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>