force-app/main/default/objects/walnut__Query__c/fields/walnut__IsActive__c.field-meta.xml
<CustomField>
    <fullName>walnut__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Active</description>
    <inlineHelpText>Is this query active ?</inlineHelpText>
    <label>Active ?</label>
    <type>Checkbox</type>
</CustomField>