force-app/main/default/objects/walnut__Query__c/fields/walnut__IsSingleRecord__c.field-meta.xml
<CustomField>
    <fullName>walnut__IsSingleRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is Single Record</description>
    <inlineHelpText>Is Single Record</inlineHelpText>
    <label>Is Single Record</label>
    <type>Checkbox</type>
</CustomField>