force-app/main/default/objects/walnut__Query__c/fields/walnut__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>walnut__ObjectName__c</fullName>
    <description>Object Name</description>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>