force-app/main/default/objects/walnut__Query__c/fields/walnut__Query__c.field-meta.xml
<CustomField>
    <fullName>walnut__Query__c</fullName>
    <description>Query</description>
    <inlineHelpText>Query</inlineHelpText>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>