force-app/main/default/objects/walnut__Query__c/listViews/walnut__All.listView-meta.xml
<ListView>
    <fullName>walnut__All</fullName>
    <columns>NAME</columns>
    <columns>walnut__IsActive__c</columns>
    <columns>walnut__Action__c</columns>
    <columns>walnut__DisplayName__c</columns>
    <columns>walnut__IsSingleRecord__c</columns>
    <columns>walnut__ObjectName__c</columns>
    <columns>walnut__Query__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>